<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ArithmeticGameActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutArithmeticGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_arithmetic_game"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_arithmetic_game"
            app:title="@string/game_title_arithmetic_toolbar"
            app:titleTextColor="@color/text_primary_dark" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/placeholder_score_display"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/text_size_round_counter"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayoutArithmeticGame"
        tools:text="Score: 120" />

    <TextView
        android:id="@+id/text_view_round_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:text="@string/placeholder_round_counter"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/text_size_round_counter"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayoutArithmeticGame"
        tools:text="Round: 1 / 10" />


    <TextView
        android:id="@+id/text_view_time_remaining_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/label_time_remaining"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/text_size_time_remaining_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_score" />


    <ProgressBar
        android:id="@+id/progress_bar_time"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="@dimen/progress_bar_height_gameplay"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        android:max="150"
        android:progressBackgroundTint="@color/progress_bar_background"
        android:progressTint="@color/progress_bar_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_time_remaining_label"
        tools:progress="120" />

    <TextView
        android:id="@+id/text_view_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/placeholder_time_value"
        android:textColor="@color/text_secondary_dark"
        android:textSize="@dimen/text_size_time_value"
        app:layout_constraintStart_toStartOf="@id/progress_bar_time"
        app:layout_constraintTop_toBottomOf="@id/progress_bar_time"
        tools:text="15s" />

    <TextView
        android:id="@+id/text_view_problem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:gravity="center"
        android:text="@string/placeholder_problem"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/text_size_arithmetic_problem"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_time_value"
        tools:text="12 + 8 - 5 = ?" />

    <EditText
        android:id="@+id/edit_text_answer"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_answer_height"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/gameplay_vertical_spacing"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:background="@drawable/bg_edittext_answer"
        android:gravity="center_vertical"
        android:hint="@string/hint_enter_answer"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:textColor="@color/text_primary_dark"
        android:textColorHint="@color/text_secondary_dark_faint"
        android:textSize="@dimen/text_size_answer_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_problem" />

    <Button
        android:id="@+id/button_submit_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:backgroundTint="@color/submit_button_background"
        android:paddingTop="@dimen/button_padding_vertical"
        android:paddingBottom="@dimen/button_padding_vertical"
        android:text="@string/button_submit"
        android:textColor="@color/button_text_white"
        android:textSize="@dimen/text_size_button"
        app:cornerRadius="@dimen/submit_button_corner_radius"
        app:layout_constraintEnd_toEndOf="@id/edit_text_answer"
        app:layout_constraintStart_toStartOf="@id/edit_text_answer"
        app:layout_constraintTop_toBottomOf="@id/edit_text_answer" />

    <TextView
        android:id="@+id/text_view_current_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/placeholder_difficulty_value"
        android:textColor="@color/text_secondary_dark"
        android:textSize="@dimen/text_size_difficulty_display_gameplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_submit_answer"
        tools:text="Difficulty: Medium" />

    <LinearLayout
        android:id="@+id/history_panel_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@drawable/bg_main_difficulty_panel"
        android:orientation="vertical"
        android:paddingStart="@dimen/history_item_padding"
        android:paddingTop="@dimen/spacing_small"
        android:paddingEnd="@dimen/history_item_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_current_difficulty">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/history_header_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_small">

            <TextView
                android:id="@+id/header_text_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/header_label_round"
                android:textColor="@color/text_primary_dark"
                android:textSize="@dimen/text_size_history_header"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_text_problem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:gravity="start"
                android:text="@string/header_label_previous_equation"
                android:textColor="@color/text_primary_dark"
                android:textSize="@dimen/text_size_history_header"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/header_text_answer"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/header_text_round"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_text_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/header_label_user_answer"
                android:textColor="@color/text_primary_dark"
                android:textSize="@dimen/text_size_history_header"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/header_text_problem"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_round_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            tools:itemCount="3"
            tools:listitem="@layout/list_item_round_history" />
    </LinearLayout>

    <include layout="@layout/layout_pause_overlay" />

    <include layout="@layout/layout_help_overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>